# pong-bevy

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci-backup.yml  ci.yaml
docs/: architecture.md  gameplay.md
src/: ball.rs  game_over.rs  hud.rs  main.rs  menu.rs  paddle.rs  state.rs
